# PySiDoCast

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  casting.cpp  pyproject.toml  setup.py
docs/: requirements.txt
docs/source/: conf.py  index.rst  usage.rst
example/: perfs.py  test.py
src/: casting.cpp  dithering.cpp  dithering.h  dithering.hxx  geometry.h  geometry.hxx  light.h  light.hxx  surface.h  surface.hxx  vector3.cpp  vector3.h  vector3.hxx
