[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "pysidocast"
version = "1.2.0"
authors = [
  { name="Yvant2000", email="yvant2000@gmail.com" },
]
description = "A simple 3D Ray Caster for pygame."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]

[project.urls]
"Homepage" = "https://github.com/Yvant2000/PySiDoCast"
"Bug Tracker" = "https://github.com/Yvant2000/PySiDoCast/issues"